--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: Neliswa Matsebula
+#logo: /assets/img/headshot_circle.png
+description: Passionate about delivering usable Products to clients and Stakeholders
+show_downloads: true
+theme: jekyll-theme-minimal
