--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Neliswa Matsebula
-#logo: /assets/img/headshot_circle.png
+logo: /assets/32d7fded-b29e-4499-b4ea-61be235686d0.jpeg
 description: Passionate about delivering usable Products to clients and Stakeholders
 show_downloads: true
 theme: jekyll-theme-minimal
